--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,13 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <h1>Blog here</h1>
+  <h1 class="heading" data-level="1">Blog here</h1>
 </BaseLayout>
+
+<style lang="scss">
+  @import "src/sass/abstracts/";
+
+  h1 {
+    color: clr("primary", 500);
+  }
+</style>
