Add abstracts and fonts

--- a/src/sass/abstracts/_breakpoints.scss
+++ b/src/sass/abstracts/_breakpoints.scss
@@ -1,5 +1,6 @@
 $breakpoints: (
-  phone: 35em,
-  tablet: 48em,
-  laptop: 71.875em, // large: 81.875em,
+  phone: 23.688, // 380px
+  tablet: 48em, // 768px
+  laptop: 71.875em, // 1150px
+  desktop: 90em // 1440px
 );
