--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,19 +1,36 @@
 $colors: (
   neutral: (
-    900: #000000,
-    100: #ffffff,
+    900: #1C1A19,
+    800: #201E1D,
+    700: #34302D,
+    600: #4A4846,
+    400: #C0BFBF,
+    300: #DEDCDA,
+    200: #EFEDEB,
+    100: #FBF9F7,
+    0: #FFFFFF,
   ),
-  primary: (
-    100: #e1e7fe,
-    300: #b3d3f1,
-    500: #345ff6,
-    900: #253347,
+  blue: (
+    900: #022B4A,
+    800: #5792C0,
+    700: #75B0DE,
+    500: #93CEFC,
+    200: #E1F1FE,
   ),
-  secondary: (
-    500: #5e6e85,
-    200: #acc1de,
+  green: (
+    900: #132A18,
+    700: #008531,
+    500: #9DD3A9,
+    200: #E9F5EA,
   ),
-  tertiary: (
-    100: #f7f0f8,
+  yellow: (
+    900: #4A3003,
+    700: #EA9806,
+    500: #FACC79,
+    200: #FFF5E1,
+  ),
+  red: (
+    400: #F04438,
+    600: #D92D20,
   ),
 );
