--- a/src/sass/components/_heading.scss
+++ b/src/sass/components/_heading.scss
@@ -3,7 +3,7 @@
 .heading {
   font-weight: $fw-600;
   line-height: $line-height-tight;
-  color: clr(primary, 900);
+  color: clr(blue, 900);
   white-space: normal;
   word-break: break-word;
 
