--- a/src/sass/abstracts/_sizes.scss
+++ b/src/sass/abstracts/_sizes.scss
@@ -1,5 +1,8 @@
 $sizes: (
   0: 0,
+  2: 0.125rem,
+  4: 0.25rem,
+  6: 0.375rem,
   8: 0.5rem,
   12: 0.75rem,
   16: 1rem,
@@ -12,6 +15,7 @@ $sizes: (
   56: 3.5rem,
   64: 4rem,
   72: 4.5rem,
+  80: 5rem,
   88: 5.5rem,
   96: 6rem,
   104: 6.5rem,
