--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -1,21 +1,39 @@
-$ff-sans: 'Inter', sans-serif;
+@font-face {
+  font-family: 'DM Sans';
+  src: url('/fonts/DMSans-VariableFont_opsz,wght.ttf') format('ttf');
+  font-weight: 100 900; /* Range supported */
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fire Code';
+  src: url('/fonts/FiraCode-VariableFont_wght.ttf') format('ttf');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+$ff-sans: 'DM Sans', sans-serif;
+$ff-mono: 'Fira Code', monospace;
 
 $ff-base: $ff-sans;
 
 $font-sizes: (
-  900: 4rem,
-  // 64px
-  800: 3rem,
-  // 48px
-  700: 2rem,
+  900: 2.5rem,
+  // 40px
+  800: 2rem,
   // 32px
+  700: 1.75rem,
+  // 28px
   600: 1.5rem,
   // 24px
   500: 1.25rem,
   // 20px
+  450: 1.125rem,
+  // 18px
   400: 1rem,
   // 16px
-  300: 0.875rem, // 14px
 );
 
 $fw-300: 300; // Light
@@ -25,13 +43,13 @@ $fw-700: 700; // Bold
 
 // Line height
 $line-height-regular: 1.5;
-$line-height-medium: 1.2;
+$line-height-medium: 1.3;
 $line-height-tight: 1.1;
 
 // Letter spacing
 $letter-spacing-tight: -0.05em;
-$letter-spacing-medium: 0.05em;
-$letter-spacing-loose: 0.1em;
+$letter-spacing-medium: -0.04em;
+$letter-spacing-loose: -0.2em;
 
 $measure-tight: 50ch;
 $measure-regular: 60ch;
