--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   @import "src/sass/abstracts/";
 
   h1 {
-    color: clr(blue, 500);
+    // color: clr(blue, 500);
   }
 </style>
