--- a/src/sass/abstracts/_breakpoints.scss
+++ b/src/sass/abstracts/_breakpoints.scss
@@ -1,5 +1,5 @@
 $breakpoints: (
-  phone: 23.688, // 380px
+  phone: 23.688em, // 380px
   tablet: 48em, // 768px
   laptop: 71.875em, // 1150px
   desktop: 90em // 1440px
