--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -1,9 +1,20 @@
 @use '../abstracts/' as *;
 
+:root {
+  --bg-color: #{clr('neutral', 100)};
+  --text-color: #{clr('neutral', 900)};
+}
+
+[data-theme="dark"] {
+  --bg-color: #{clr('neutral', 900)};
+  --text-color: #{clr('neutral', 100)};
+}
+
 body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
   font-family: $ff-base;
   font-size: fs(400);
   font-weight: $fw-400;
-  color: clr(neutral, 900);
   line-height: $line-height-regular;
 }
