--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <h1 class="heading" data-level="1">Blog here</h1>
+  <!-- <h1 class="heading" data-level="1">Blog here</h1> -->
 </BaseLayout>
 
 <style lang="scss">
