--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -10,26 +10,26 @@ $colors: (
     100: #FBF9F7,
     0: #FFFFFF,
   ),
-  blue: (
+  "blue": (
     900: #022B4A,
     800: #5792C0,
     700: #75B0DE,
     500: #93CEFC,
     200: #E1F1FE,
   ),
-  green: (
+  "green": (
     900: #132A18,
     700: #008531,
     500: #9DD3A9,
     200: #E9F5EA,
   ),
-  yellow: (
+  "yellow": (
     900: #4A3003,
     700: #EA9806,
     500: #FACC79,
     200: #FFF5E1,
   ),
-  red: (
+  "red": (
     400: #F04438,
     600: #D92D20,
   ),
