--- a/src/sass/components/_paragraph.scss
+++ b/src/sass/components/_paragraph.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .paragraph {
-  color: clr(green, 500);
+  color: clr(neutral, 100);
 
   .hero & {
     max-inline-size: $measure-tight;
