--- a/src/sass/components/_paragraph.scss
+++ b/src/sass/components/_paragraph.scss
@@ -1,7 +1,10 @@
 @use '../abstracts' as *;
 
 .paragraph {
-  color: clr(neutral, 100);
+  // color: clr(neutral, 100);
+  font-size:fs(450);
+  line-height: $line-height-regular;
+  font-weight: $fw-300;
 
   .hero & {
     max-inline-size: $measure-tight;
