--- a/src/sass/abstracts/_sizes.scss
+++ b/src/sass/abstracts/_sizes.scss
@@ -27,8 +27,8 @@ $section-padding: clamp(3rem, 10vh, 7rem);
 
 $container-inline-padding: clamp(4rem, 6rem + 1vw, 9rem);
 $container-max-width: 40.625rem;
-
 $container-max-width-wide: 75rem;
+$content-max-width: 95%;
 
 $grid-gap: 1.5rem;
 $flex-group-gap: 1rem;
