--- a/src/sass/individuals/_navbar.scss
+++ b/src/sass/individuals/_navbar.scss
@@ -4,11 +4,10 @@
   $parent: &;
   padding: 1rem;
   background-color: clr('neutral', 0);
-  @include border($color: clr('neutral', 200), $radius: size(8));
+  @include border-all($radius: size(8));
   
   [data-theme="dark"] & {
     background-color: clr('neutral', 800);
-    @include border($color: clr('neutral', 700), $radius: size(8));
   }
 
   &__container {
@@ -35,7 +34,7 @@
     display: flex;
     gap: 2rem;
     list-style: none;
-
+    
     li a {
       font-weight: $fw-300;
       text-decoration: none;
@@ -50,14 +49,16 @@
       top: 100%;
       right: 0;
       padding: 1rem;
-      gap: 1rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transform: translateY(size(32));
       width: 100%;
-      @include border($color: clr('neutral', 200), $radius: size(8));
+      gap: 1rem;
+      background-color: clr('neutral', 0);
+      transform: translateY(size(32));
+      @include box-shadow($blur: 10px);
+      @include border-all($radius: size(8));
 
       [data-theme="dark"] & {
-        @include border($color: clr('neutral', 700), $radius: size(8));
+        @include border-all($radius: size(8));
+        background-color: clr('neutral', 800);
       }
 
       &.is-active {
@@ -65,11 +66,11 @@
       }
 
       li:not(:last-child) {
-        @include border($color: clr('neutral', 200), $side: bottom);
+        @include border-side($side: bottom);
         padding: size(6) 0;
         
         [data-theme="dark"] & {
-          @include border($color: clr('neutral', 700), $side: bottom);
+          @include border-side($side: bottom);
         }
       }
 
@@ -142,17 +143,22 @@
     border-radius: 25%;
     background-color: clr('neutral', 200);
     padding: size(8);
-
+    
     [data-theme="dark"] & {
       background-color: clr('neutral', 900);
     }
-  }
 
+    &:hover {
+      color: clr('yellow', 700);
+    }
+  }
+  
   &__theme-icon {
     display: none;
-
+    
     &.is-active {
       display: block;
     }
+    
   }
 }
