--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -7,13 +7,11 @@
   width: min(100% - var(--padding), var(--max-width));
   margin-inline: auto;
 
-  /* @include mq('laptop') {
-    --padding: 2.5rem * 2;
-    --max-width: 43rem;
-  } */
-
   @include mq('tablet') {
     --padding: 2rem * 2;
+  }
+  @include mq('phone') {
+    --padding: 1rem * 2;
   }
 }
 
