--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Intro from "@/components/home/Intro.astro";
+import Intro from "@/components/Intro.astro";
 import LatestArticles from "@/components/home/LatestArticles.astro";
+import { baseData } from "@/data/siteData";
 ---
 
 <BaseLayout>
-  <Intro />
+  <Intro greeting={baseData.greeting} intro={baseData.home_intro} showSocial />
   <LatestArticles />
 </BaseLayout>
