--- a/src/components/ui/IconButton.astro
+++ b/src/components/ui/IconButton.astro
@@ -23,5 +23,5 @@ const Tag = tagName || "button";
   class:list={["icon-button", { "icon-button--blend": blend }]}
   {...tagName === "a" && href ? { href } : {}}
 >
-  <Icon class="" name={icon} size={size} />
+  <Icon name={icon} size={size} />
 </Tag>
