--- a/src/components/article/ArticlePreview.astro
+++ b/src/components/article/ArticlePreview.astro
@@ -4,7 +4,7 @@ import Heading from "../ui/Heading.astro";
 import Link from "../ui/Link.astro";
 
 interface Props {
-  data: CollectionEntry<"posts">;
+  data: CollectionEntry<"posts">["data"];
   showDescription?: boolean;
   url: string;
 }
