--- a/src/components/home/LatestArticles.astro
+++ b/src/components/home/LatestArticles.astro
@@ -4,7 +4,11 @@ import Heading from "../ui/Heading.astro";
 import Link from "../ui/Link.astro";
 import ArticlePreview from "../article/ArticlePreview.astro";
 
-const posts: CollectionEntry<"posts">[] = await getCollection("posts");
+interface Props {
+  posts: CollectionEntry<"posts">[];
+}
+
+const { posts } = Astro.props;
 ---
 
 <section class="latest-articles padding-block-start-48 padding-block-end-24">
@@ -14,11 +18,11 @@ const posts: CollectionEntry<"posts">[] = await getCollection("posts");
       posts
         .slice(0, 3)
         .map(({ data, slug }) => (
-          <ArticlePreview data={data} url={`/posts/${slug}/`} />
+          <ArticlePreview data={data} url={`/blog/${slug}/`} />
         ))
     }
   </div>
-  <Link href="#" underline>View all articles</Link>
+  <Link href="/blog" underline>View all articles</Link>
 </section>
 
 <style lang="scss">
