--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -22,20 +22,20 @@ const { page } = Astro.props;
   <AllArticles data={page.data} />
   <div class="pagination">
     <div class="pagination__page">
-      Page {page.currentPage}
+      <span>Page {page.currentPage}</span>
     </div>
     <div class="pagination__links">
       {
         page.url.prev && (
           <Link href={page.url.prev} underline>
-            Previous articles
+            <span>Previous articles</span>
           </Link>
         )
       }
       {
         page.url.next && (
           <Link href={page.url.next} underline>
-            Next articles
+            <span>Next articles</span>
           </Link>
         )
       }
@@ -43,10 +43,14 @@ const { page } = Astro.props;
   </div>
 </BaseLayout>
 
-<style>
+<style lang="scss">
   .pagination {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    &__page {
+      font-style: italic;
+    }
   }
 </style>
