--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -42,7 +42,6 @@ import { navData } from "@/data/siteData";
         aria-pressed="false"
       >
         <Icon
-          id="theme-toggle-icon"
           class="navbar__theme-icon navbar__icon--sun"
           name="icon--sun"
           size={24}
@@ -58,50 +57,51 @@ import { navData } from "@/data/siteData";
 </nav>
 
 <script>
-  // Navbar toggle
-  const navbarToggle = document.querySelector(".navbar__toggle");
-  const menu = document.querySelector(".navbar__menu");
+  document.addEventListener("DOMContentLoaded", () => {
+    const root = document.documentElement;
+    const menu = document.querySelector(".navbar__menu");
+    const navbarToggle = document.querySelector(".navbar__toggle");
+    const themeToggle = document.getElementById("theme-toggle");
+    const themeToggleIcons = document.querySelectorAll(".navbar__theme-icon");
 
-  navbarToggle?.addEventListener("click", () => {
-    const isExpanded = navbarToggle.getAttribute("aria-expanded") === "true";
-    navbarToggle.setAttribute("aria-expanded", String(!isExpanded));
-    menu?.classList.toggle("is-active");
-    navbarToggle.classList.toggle("is-active");
-  });
-</script>
-
-<script>
-  // Theme toggle
-  const themeToggle = document.getElementById("theme-toggle");
-  const themeToggleIcons = document.querySelectorAll(".navbar__theme-icon");
-  const root = document.documentElement;
-
-  function setTheme(theme: string) {
-    root.setAttribute("data-theme", theme);
-    localStorage.setItem("theme", theme);
-
-    themeToggleIcons.forEach((icon) => {
-      icon.classList.toggle(
-        "is-active",
-        icon.classList.contains(
-          `navbar__icon--${theme === "dark" ? "sun" : "moon"}`
-        )
-      );
+    // Navbar toggle
+    navbarToggle?.addEventListener("click", () => {
+      const isExpanded = navbarToggle.getAttribute("aria-expanded") === "true";
+      navbarToggle.setAttribute("aria-expanded", String(!isExpanded));
+      menu?.classList.toggle("is-active");
+      navbarToggle.classList.toggle("is-active");
     });
 
-    const isPressed = themeToggle?.getAttribute("aria-pressed") === "true";
-    themeToggle?.setAttribute("aria-pressed", String(!isPressed));
-  }
+    // Theme toggle
+    function setTheme(theme: string) {
+      root.setAttribute("data-theme", theme);
+      localStorage.setItem("theme", theme);
 
-  // Init theme on load
-  const savedTheme = localStorage.getItem("theme");
-  const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-  const currentTheme = savedTheme || (prefersDark ? "dark" : "light");
-  setTheme(currentTheme);
+      themeToggleIcons.forEach((icon) => {
+        icon.classList.toggle(
+          "is-active",
+          icon.classList.contains(
+            `navbar__icon--${theme === "dark" ? "sun" : "moon"}`
+          )
+        );
+      });
 
-  themeToggle?.addEventListener("click", () => {
-    const newTheme =
-      root.getAttribute("data-theme") === "dark" ? "light" : "dark";
-    setTheme(newTheme);
+      const isPressed = themeToggle?.getAttribute("aria-pressed") === "true";
+      themeToggle?.setAttribute("aria-pressed", String(!isPressed));
+    }
+
+    // Init theme on load
+    const savedTheme = localStorage.getItem("theme");
+    const prefersDark = window.matchMedia(
+      "(prefers-color-scheme: dark)"
+    ).matches;
+    const currentTheme = savedTheme || (prefersDark ? "dark" : "light");
+    setTheme(currentTheme);
+
+    themeToggle?.addEventListener("click", () => {
+      const newTheme =
+        root.getAttribute("data-theme") === "dark" ? "light" : "dark";
+      setTheme(newTheme);
+    });
   });
 </script>
