Make misc improvements

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -52,5 +52,10 @@ const { page } = Astro.props;
     &__page {
       font-style: italic;
     }
+    &__links {
+      display: flex;
+      gap: 2rem;
+      // justify-content: space-between;
+    }
   }
 </style>
