--- a/src/components/article/ArticlePreview.astro
+++ b/src/components/article/ArticlePreview.astro
@@ -2,6 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import Heading from "../ui/Heading.astro";
 import Link from "../ui/Link.astro";
+import { formatDate } from "@/utils/date-utils";
 
 interface Props {
   data: CollectionEntry<"posts">["data"];
@@ -11,11 +12,7 @@ interface Props {
 
 const { data, showDescription, url } = Astro.props;
 
-const formattedDate = new Date(data.pubDate).toLocaleDateString("en-US", {
-  year: "numeric",
-  month: "long",
-  day: "numeric",
-});
+const formattedDate = formatDate(data.pubDate);
 ---
 
 <div class="article-preview">
