--- a/src/sass/pages/_blog-entry.scss
+++ b/src/sass/pages/_blog-entry.scss
@@ -1,6 +1,7 @@
 @use '../abstracts/' as *;
 
 .blog-entry {
+
   &__date {
     font-style: italic;
   }
@@ -56,6 +57,11 @@
     p {
       margin-block: size(16);
     }
+    
+    a {
+      // text-decoration: none;
+      color: var(--text-color);
+    }
 
     ul, ol {
       padding-left: 1.5rem;
@@ -64,7 +70,7 @@
 
     blockquote {
       padding: 1rem;
-      border-left: 4px solid var(--color-accent);
+      border-left: 4px solid var(--text-color);
       background-color: var(--color-background-alt);
       margin-block: 1.5rem;
     }
