--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,13 +33,13 @@ import IconButton from "./ui/IconButton.astro";
         size={24}
         blend
       />
-      <IconButton
+      <!-- <IconButton
         tagName="a"
         href="https://www.frontendmentor.io/profile/cepoumian"
         icon="icon--femr"
         size={24}
         blend
-      />
+      /> -->
     </div>
   </div>
 </footer>
