--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -13,6 +13,12 @@ const { title = baseData.title, description = baseData.description }: Props =
 <head>
   <meta charset="utf-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    title={baseData.title}
+    href={`${Astro.site}rss.xml`}
+  />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <meta name="description" content={description} />
