--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -15,6 +15,14 @@ body {
   color: var(--text-color);
   font-family: $ff-base;
   line-height: $line-height-regular;
-  font-size: fs(450);
+  font-size: fs(500);
   font-weight: $fw-300;
+
+  @include mq('tablet') {
+    font-size: fs(450);
+  }
+
+  @include mq('phone') {
+    font-size: fs(400);
+  }
 }
