--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -8,10 +8,12 @@
   margin-inline: auto;
 
   @include mq('tablet') {
-    --padding: 2rem * 2;
+    // --padding: 2rem * 2;
+    --padding: 0;
   }
   @include mq('phone') {
-    --padding: 1rem * 2;
+    // --padding: 1rem * 2;
+    --padding: 0;
   }
 }
 
